@@ -4,3 +4,4 @@
 /tmp/
 /libcm4all-was*-dev/
 /libcm4all-was-*1/
+/cm4all-was-examples/
