@@ -1,0 +1,2 @@
+usr/lib/*/libcm4all-was/was-bin/* usr/lib/cm4all/was/bin
+
